--- a/viewer.html
+++ b/viewer.html
@@ -1,261 +1,184 @@
 <!DOCTYPE html>
- <html lang="ru">
- <head>
-   <meta charset="UTF-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   <link rel="icon" href="https://storage.yandexcloud.net/mymodels/favicon.ico" type="image/x-icon"/>
-   <title>Просмотр модели</title>
-   <style>
-     body {
-       margin: 0;
-       padding: 0;
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       justify-content: center;
-       height: 100vh;
-       background: url('background.jpg') no-repeat center center fixed;
-       background-size: cover;
-     }
- 
-     canvas {
-       width: 80%;
-       height: 80vh;
-       background: white;
-       border-radius: 10px;
-       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-       position: relative;
-     }
- 
-     .description {
-       position: absolute;
-       top: 10px;
-       left: 10px;
-       background: rgba(255, 255, 255, 0.9);
-       padding: 12px 16px;
-       border: 1px solid #999;
-       font-size: 14px;
-       color: #333;
-       max-width: 25%;
-       text-align: left;
-       z-index: 1;
-       box-sizing: border-box;
-     }
- 
-     .description strong {
-       display: block;
-       margin-bottom: 6px;
-     }
- 
-     .controls {
-       margin-top: 20px;
-       display: flex;
-       gap: 10px;
-       flex-wrap: wrap;
-       justify-content: center;
-       background-color: transparent;
-       border: none;
-     }
- 
-     .controls button {
-       padding: 15px;
-       font-size: 30px;
-       cursor: pointer;
-       background: black;
-       color: white;
-       border: none;
-       background: white;
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       border-radius: 5px;
-       width: 50px;
-       height: 50px;
-       border-radius: 5px;
-       color: white;
-     }
- 
-     .controls button:hover {
-       background: white;
-       background: #444;
-     }
- 
-     .projects-button {
-       margin-top: 10px;
-       padding: 10px 20px;
-       font-size: 16px;
-       width: auto;
-       height: auto;
-       background: #c0c0c0;
-       color: black;
-       border-radius: 5px;
-     }
- 
-     .projects-button:hover {
-       background: #808080;
-     }
- 
-     .arrow-button {
-       background: black;
-       color: white;
-       border-radius: 5px;
-       width: 50px;
-       height: 50px;
-       font-size: 30px;
-     }
-   </style>
-   <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.js"></script>
- 
-   <script src="https://cdn.babylonjs.com/babylon.js"></script>
-   <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.js"></script>
- </head>
- <body>
-   <canvas id="modelCanvas"></canvas>
- 
-   <div class="description">
-     <strong>Комментарий:</strong>
-     <span id="descriptionText">Загрузка описания...</span>
-   </div>
- 
-   <div class="controls">
-     <button class="arrow-button" onclick="rotate(-90)">⬅️</button>
-     <button class="arrow-button" onclick="setTopView()">⬇️</button>
-     <button class="arrow-button" onclick="rotate(90)">➡️</button>
-     <button onclick="rotate(-90)">⬅️</button>
-     <button onclick="setTopView()">⬇️</button>
-     <button onclick="rotate(90)">➡️</button>
-   </div>
- 
-   <button class="projects-button" onclick="location.href='index.html'">
-     ПРОЕКТЫ
-   </button>
-   <button class="projects-button" onclick="location.href='index.html'">ПРОЕКТЫ</button>
- 
-   <script>
-     let scene;
-     let engine;
-     let currentAzimuth = 0;
-     let scene, engine, currentAzimuth = 0;
- 
-     document.addEventListener("DOMContentLoaded", () => {
-       const params = new URLSearchParams(window.location.search);
-       const modelUrl = params.get("model");
- 
-       if (modelUrl) {
-         const canvas = document.getElementById("modelCanvas");
-         engine = new BABYLON.Engine(canvas, true);
-         scene = new BABYLON.Scene(engine);
- 
-         BABYLON.SceneLoader.Append("", modelUrl, scene, () => {
-           scene.createDefaultCameraOrLight(true, true, true);
-           scene.createDefaultEnvironment();
-           engine.runRenderLoop(() => {
-             scene.render();
-           });
-         }, null, (scene, message) => {
-           console.error("Ошибка загрузки модели:", message);
-           alert("Не удалось загрузить модель.");
-         });
-       if (!modelUrl) {
-         alert("Ошибка: URL модели не указан!");
-         return;
-       }
- 
-         fetch("https://storage.yandexcloud.net/mymodels/models.txt")
-           .then(response => response.text())
-           .then(text => {
-             const lines = text.split("\n");
-             let descriptionFound = false;
- 
-             for (const line of lines) {
-               const parts = line.split(",");
- 
-               if (parts.length >= 3) {
-                 const name = parts[0];
-                 const url = parts[1];
-                 const description = parts.slice(2).join(",");
- 
-                 if (url.trim() === modelUrl) {
-                   document.getElementById("descriptionText").textContent = description.trim() || "Описание модели не найдено.";
-                   descriptionFound = true;
-                   break;
-                 }
-               }
-             }
-       const canvas = document.getElementById("modelCanvas");
-       engine = new BABYLON.Engine(canvas, true);
-       scene = new BABYLON.Scene(engine);
- 
-             if (!descriptionFound) {
-               document.getElementById("descriptionText").textContent = "Описание модели не найдено.";
-             }
-           })
-           .catch(err => {
-             console.error("Ошибка загрузки описания:", err);
-             document.getElementById("descriptionText").textContent = "Ошибка загрузки описания.";
-           });
-       BABYLON.SceneLoader.Append("", modelUrl, scene, () => {
-         const camera = new BABYLON.ArcRotateCamera("Camera", Math.PI / 2, Math.PI / 2.5, 5, BABYLON.Vector3.Zero(), scene);
-         camera.attachControl(canvas, true);
-         camera.wheelDeltaPercentage = 0.01;
-         scene.activeCamera = camera;
- 
-       } else {
-         alert("Ошибка: URL модели не указан!");
-       }
-         const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0), scene);
-         scene.createDefaultEnvironment();
- 
-         engine.runRenderLoop(() => {
-           scene.render();
-         });
-       }, null, (scene, message, exception) => {
-         console.error("Ошибка загрузки модели:", message, exception);
-         alert("Не удалось загрузить модель. Проверьте URL.");
-       });
- 
-       window.addEventListener("resize", () => {
-         engine.resize();
-       });
- 
-       fetch("https://storage.yandexcloud.net/mymodels/models.txt")
-         .then(res => res.text())
-         .then(text => {
-           const lines = text.split("\n");
-           for (const line of lines) {
-             const parts = line.split(",");
-             if (parts.length >= 3) {
-               const name = parts[0].trim();
-               const url = parts[1].trim();
-               const description = parts.slice(2).join(",").trim();
-               if (decodeURIComponent(modelUrl) === url) {
-                 document.getElementById("descriptionText").textContent = description || "Описание отсутствует.";
-                 return;
-               }
-             }
-           }
-           document.getElementById("descriptionText").textContent = "Описание модели не найдено.";
-         })
-         .catch(error => {
-           console.error("Ошибка загрузки описания:", error);
-           document.getElementById("descriptionText").textContent = "Ошибка загрузки описания.";
-         });
-     });
- 
-     function rotate(degrees) {
-       if (!scene || !scene.activeCamera) return;
-       currentAzimuth = (currentAzimuth + degrees + 360) % 360;
-       const camera = scene.activeCamera;
-       camera.alpha = BABYLON.Tools.ToRadians(currentAzimuth);
-       scene.activeCamera.alpha = BABYLON.Tools.ToRadians(currentAzimuth);
-     }
- 
-     function setTopView() {
-       const camera = scene.activeCamera;
-       camera.beta = BABYLON.Tools.ToRadians(90);
-       if (!scene || !scene.activeCamera) return;
-       scene.activeCamera.beta = BABYLON.Tools.ToRadians(90);
-     }
-   </script>
- </body>
- </html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="https://storage.yandexcloud.net/mymodels/favicon.ico" type="image/x-icon"/>
+  <title>Просмотр модели</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    canvas {
+      width: 80%;
+      height: 80vh;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .description {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 12px 16px;
+      border: 1px solid #999;
+      font-size: 14px;
+      color: #333;
+      max-width: 25%;
+      text-align: left;
+      z-index: 1;
+      box-sizing: border-box;
+    }
+
+    .description strong {
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .controls {
+      margin-top: 20px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .controls button {
+      width: 50px;
+      height: 50px;
+      font-size: 30px;
+      background: black;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .controls button:hover {
+      background: #444;
+    }
+
+    .projects-button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #c0c0c0;
+      color: black;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .projects-button:hover {
+      background: #808080;
+    }
+  </style>
+
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.js"></script>
+</head>
+<body>
+  <canvas id="modelCanvas"></canvas>
+
+  <div class="description">
+    <strong>Комментарий:</strong>
+    <span id="descriptionText">Загрузка описания...</span>
+  </div>
+
+  <div class="controls">
+    <button onclick="rotate(-90)">⬅️</button>
+    <button onclick="setTopView()">⬇️</button>
+    <button onclick="rotate(90)">➡️</button>
+  </div>
+
+  <button class="projects-button" onclick="location.href='index.html'">ПРОЕКТЫ</button>
+
+  <script>
+    let engine, scene, currentAzimuth = 0;
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const params = new URLSearchParams(window.location.search);
+      const modelUrl = params.get("model");
+
+      if (!modelUrl) {
+        alert("Ошибка: URL модели не указан!");
+        return;
+      }
+
+      const canvas = document.getElementById("modelCanvas");
+      engine = new BABYLON.Engine(canvas, true);
+      scene = new BABYLON.Scene(engine);
+
+      BABYLON.SceneLoader.Append("", modelUrl, scene, () => {
+        const camera = new BABYLON.ArcRotateCamera("Camera", Math.PI / 2, Math.PI / 2.5, 5, BABYLON.Vector3.Zero(), scene);
+        camera.attachControl(canvas, true);
+        camera.wheelDeltaPercentage = 0.01;
+        scene.activeCamera = camera;
+
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0), scene);
+        scene.createDefaultEnvironment();
+
+        engine.runRenderLoop(() => {
+          scene.render();
+        });
+      }, null, (scene, message, exception) => {
+        console.error("Ошибка загрузки модели:", message, exception);
+        alert("Не удалось загрузить модель. Проверьте URL.");
+      });
+
+      window.addEventListener("resize", () => {
+        engine.resize();
+      });
+
+      // Загрузка описания модели
+      fetch("https://storage.yandexcloud.net/mymodels/models.txt")
+        .then(response => response.text())
+        .then(text => {
+          const lines = text.split("\n");
+          let descriptionFound = false;
+          for (const line of lines) {
+            const parts = line.split(",");
+            if (parts.length >= 3) {
+              const name = parts[0].trim();
+              const url = parts[1].trim();
+              const description = parts.slice(2).join(",").trim();
+              if (decodeURIComponent(modelUrl) === url) {
+                document.getElementById("descriptionText").textContent = description || "Описание отсутствует.";
+                descriptionFound = true;
+                break;
+              }
+            }
+          }
+          if (!descriptionFound) {
+            document.getElementById("descriptionText").textContent = "Описание модели не найдено.";
+          }
+        })
+        .catch(err => {
+          console.error("Ошибка загрузки описания:", err);
+          document.getElementById("descriptionText").textContent = "Ошибка загрузки описания.";
+        });
+    });
+
+    function rotate(degrees) {
+      if (!scene || !scene.activeCamera) return;
+      currentAzimuth = (currentAzimuth + degrees + 360) % 360;
+      scene.activeCamera.alpha = BABYLON.Tools.ToRadians(currentAzimuth);
+    }
+
+    function setTopView() {
+      if (!scene || !scene.activeCamera) return;
+      scene.activeCamera.beta = BABYLON.Tools.ToRadians(90);
+    }
+  </script>
+</body>
+</html>
